--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -15,6 +16,8 @@
     "mongoose": "^5.10.11",
     "morgan": "~1.9.0",
     "request": "^2.88.2",
-    "sync-request": "^6.1.0"
+    "socket.io": "^3.1.1",
+    "sync-request": "^6.1.0",
+    "uid2": "0.0.3"
   }
 }
